# mediaporter

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  mediaporter  plan.md  pyproject.toml
MacApp/: .gitignore  Package.swift
MacApp/App/Sources/: App.swift  AppIcon.swift  BatchTimelineView.swift  BugReporter.swift  ClusterExtrasSection.swift  ConfigLoader.swift  ContentView.swift  DeviceCleanup.swift  DeviceColumnView.swift  EmptyStateView.swift  FileRowView.swift  SendDiagnosticSheet.swift  SettingsView.swift  ShowPickerSheet.swift  Theme.swift  TitleBar.swift  WelcomeSheet.swift
MacApp/CLI/Sources/: main.swift
MacApp/MediaPorter/Sources/: App.swift
MacApp/Signing/: Info.plist  MediaPorter.entitlements
MacApp/Tests/MediaPorterCoreTests/: AudioClassifierTests.swift  ClusterSelectionCaptureTests.swift  CompatibilityTests.swift  EpisodeArtworkTests.swift  FilenameParserTests.swift  MetricsCollectorTests.swift  SyncPlistTests.swift
MacApp/scripts/: build-app.sh  build-dmg.sh  build-ffmpeg.sh  make-icon.sh  make-icon.swift  release.sh  test_subtitle_picker.py
brand/: README.md  tokens.css  tokens.json
brand/appstore/: AppIcon.icns  README.md  copy.md
python-reference/: README.md  pyproject.toml
python-reference/scripts/: atc_proper_sync.py  atc_tv_series_test.py  lldb_atc_trace.py  trace_atc_sync.sh
python-reference/tests/: conftest.py
research/: README.md
research/docs/: AIRTRAFFICHOST_FINDINGS.md  AMPDEVICES_AGENT_STRINGS.md  ARCHITECTURE.md  ATC_PIPELINE_OPTIMIZATION.md  ATC_PROTOCOL.md  ATC_SYNC_FLOW.md  AUDIO_SWITCHER_RULE.md  CAPTURE_WORKFLOW.md  DEVICE_CAPABILITIES.md  FINDER_AUTOMATION.md  GRAPPA.md  HISTORY.md  IMPLEMENTATION_GUIDE.md  IOS_TEST_HARNESS.md  IPAINSTALL_ANALYSIS.md  MEDIA_LIBRARY_DB.md  PHANTOM_REP_PID_TESTS.md  RELEASE_TESTING.md  RESEARCH_REQUEST.md  SUDO_FREE.md  TRACE_ANALYSIS.md  XPC_APPROACH.md
research/scripts/: afc_compare_files.py  afc_plus_atc.py  afc_snapshot_diff.py  airtraffichost_poc.py  airtraffichost_poc2.py  airtraffichost_poc3.py  airtraffichost_poc4.py  atc_beginsync.py  atc_dual_plist.py  atc_explorer.py  atc_field_test.py  atc_file_transfer.py  atc_fixed_plist.py  atc_full_sync.py  atc_full_sync2.py  atc_gotunes_video.py  atc_grappa_patch.py  atc_insert_experiments.py  atc_legacy_flow.py  atc_manual_sync.py  atc_native  atc_native.c  atc_native_1013  atc_native_old  atc_plist_variations.py  atc_raw_socket.py  atc_raw_transfer.py  atc_sync_file.py  atc_test_sync.py  capture_sync.sh  direct_file_push.py  direct_push2.py  file_transfer.py  file_transfer2.py  legacy_flow.py  list_device_services.py  lldb_afc_trace.py  lldb_deep_trace.py  lldb_grappa_test.py  rosetta_test.py  (+5 more)
scripts/: atc_nodeps_sync.py  test_audio_switcher.py
scripts/cig/: cig_wrapper.cpp
scripts/ios/: mp-ios.sh
site/: README.md  astro.config.mjs  package-lock.json  package.json  tsconfig.json  wrangler.toml
site/public/: _redirects  llms.txt  robots.txt
site/src/i18n/: locales.ts
src/mediaporter/: __init__.py  audio.py  cli.py  compat.py  config.py  device.py  exceptions.py  mediadb.py  metadata.py  pipeline.py  probe.py  progress.py  subtitles.py  tagger.py  transcode.py  transfer.py
tests/fixtures/: generate_test_videos.py
tests/unit/: test_audio.py  test_compat.py  test_device_pick.py  test_metadata.py  test_probe.py  test_transcode.py
(+105 files in other folders)
