[project]
name = "mediaporter"
version = "0.1.0"
description = "Transfer video files to iOS devices over USB with smart transcoding and native TV app integration"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
authors = [{ name = "mediaporter contributors" }]
keywords = ["ios", "ipad", "video", "transcode", "transfer", "tv-app", "ffmpeg"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video :: Conversion",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pymobiledevice3>=4.0",
    "mutagen>=1.47",
    "guessit>=3.8",
    "tmdbsimple>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.scripts]
mediaporter = "mediaporter.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mediaporter"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
markers = ["ipad: requires connected iPad device"]
testpaths = ["tests"]
