[project]
name = "mediaporter"
version = "0.2.0"
description = "Transfer videos to iPhone/iPad TV app over USB — no iTunes, no cloud, automatic transcoding"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
authors = [{ name = "mediaporter contributors" }]
keywords = [
    "ios", "ipad", "iphone", "video", "transfer", "transcode",
    "tv-app", "apple-tv", "ffmpeg", "hevc", "h264", "mkv", "mp4",
    "usb", "sideload", "itunes-alternative", "finder-sync",
    "media-sync", "video-converter", "cli",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video :: Conversion",
    "Topic :: Multimedia :: Video",
    "Topic :: System :: Hardware",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "mutagen>=1.47",
    "guessit>=3.8",
    "tmdbsimple>=2.9",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.scripts]
mediaporter = "mediaporter.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mediaporter"]

[tool.hatch.build.targets.wheel.force-include]
"src/mediaporter/sync/data" = "mediaporter/sync/data"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
markers = [
    "ipad: requires connected iPad device",
    "ffmpeg: requires ffmpeg installed",
]
testpaths = ["tests"]
